--- a/Comedian Soundboard.WindowsPhone/Comedian Soundboard.WindowsPhone.csproj
+++ b/Comedian Soundboard.WindowsPhone/Comedian Soundboard.WindowsPhone.csproj
@@ -96,19 +96,20 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\BadgeLogo.scale-240.jpg" />
-    <Content Include="Assets\Logo.scale-240.png" />
-    <Content Include="Assets\SmallLogo.scale-240.png" />
-    <Content Include="Assets\SplashScreen.scale-100.jpg" />
-    <Content Include="Assets\SplashScreen.scale-240.png" />
-    <Content Include="Assets\Square150x150Logo.scale-100.jpg" />
-    <Content Include="Assets\Square44x44Logo.scale-100.jpg" />
-    <Content Include="Assets\Square71x71Logo.scale-100.jpg" />
-    <Content Include="Assets\Square71x71Logo.scale-240.png" />
-    <Content Include="Assets\StoreLogo.scale-240.jpg" />
-    <Content Include="Assets\StoreLogo.scale-240.png" />
-    <Content Include="Assets\Wide310x150Logo.scale-100.jpg" />
-    <Content Include="Assets\WideLogo.scale-240.png" />
+    <Content Include="Assets\BadgeLogo.jpg" />
+    <Content Include="Assets\Comedy50.jpg" />
+    <Content Include="Assets\Logo.png" />
+    <Content Include="Assets\SmallLogo.png" />
+    <Content Include="Assets\SplashScreen.jpg" />
+    <Content Include="Assets\SplashScreen.png" />
+    <Content Include="Assets\Square150x150Logo.jpg" />
+    <Content Include="Assets\Square44x44Logo.jpg" />
+    <Content Include="Assets\Square71x71Logo.jpg" />
+    <Content Include="Assets\Square71x71Logo.png" />
+    <Content Include="Assets\StoreLogo.png" />
+    <Content Include="Assets\StoreLogo.jpg" />
+    <Content Include="Assets\Wide310x150Logo.jpg" />
+    <Content Include="Assets\WideLogo.png" />
     <Content Include="Assets\HubBackground.theme-dark.png" />
     <Content Include="Assets\HubBackground.theme-light.png" />
     <Content Include="ApplicationInsights.config">
