--- a/Comedian Soundboard.WindowsPhone/packages.config
+++ b/Comedian Soundboard.WindowsPhone/packages.config
@@ -3,4 +3,5 @@
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="wpa81" />
   <package id="Microsoft.ApplicationInsights.PersistenceChannel" version="1.2.3" targetFramework="wpa81" />
   <package id="Microsoft.ApplicationInsights.WindowsApps" version="1.1.1" targetFramework="wpa81" />
+  <package id="TagLib.Portable" version="1.0.3" targetFramework="wpa81" />
 </packages>
