--- a/Comedian Soundboard.Windows/Comedian Soundboard.Windows.csproj
+++ b/Comedian Soundboard.Windows/Comedian Soundboard.Windows.csproj
@@ -119,6 +119,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\BackButton.png" />
     <Content Include="Assets\Logo.scale-100.png" />
     <Content Include="Assets\SmallLogo.scale-100.png" />
     <Content Include="Assets\SplashScreen.scale-100.png" />
