Added Azure Application Insights to Windows 8.1

--- a/Comedian Soundboard.Windows/Comedian Soundboard.Windows.csproj
+++ b/Comedian Soundboard.Windows/Comedian Soundboard.Windows.csproj
@@ -118,6 +118,10 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <Content Include="AdMediator.config" />
+    <Content Include="ApplicationInsights.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="Comedian Soundboard.Windows_StoreKey.pfx" />
     <None Include="Comedian Soundboard.Windows_TemporaryKey.pfx" />
     <None Include="packages.config" />
