--- a/Comedian Soundboard.WindowsPhone/Comedian Soundboard.WindowsPhone.csproj
+++ b/Comedian Soundboard.WindowsPhone/Comedian Soundboard.WindowsPhone.csproj
@@ -97,18 +97,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Comedy50.jpg" />
-    <Content Include="Assets\Logo.png" />
-    <Content Include="Assets\SmallLogo.png" />
-    <Content Include="Assets\SplashScreen.png" />
-    <Content Include="Assets\SplashScreen.scale-100.jpg" />
+    <Content Include="Assets\SplashScreen.jpg" />
     <Content Include="Assets\Square150x150Logo.jpg" />
     <Content Include="Assets\Square44x44Logo.jpg" />
     <Content Include="Assets\Square71x71Logo.jpg" />
     <Content Include="Assets\Square71x71Logo.png" />
-    <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\StoreLogo.jpg" />
     <Content Include="Assets\Wide310x150Logo.jpg" />
-    <Content Include="Assets\WideLogo.png" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
