Changed Windows 8.1 ellipse ratio to image, added more comedians

--- a/Comedian Soundboard.Windows/Comedian Soundboard.Windows.csproj
+++ b/Comedian Soundboard.Windows/Comedian Soundboard.Windows.csproj
@@ -165,7 +165,7 @@
   </ItemGroup>
   <ItemGroup>
     <SDKReference Include="Microsoft.AdMediatorWindows81, Version=1.0">
-      <Name>Microsoft.AdMediatorWindows81</Name>
+      <Name>Ad Mediator SDK for Windows 8.1 XAML</Name>
     </SDKReference>
     <SDKReference Include="Microsoft.VCLibs, Version=12.0">
       <Name>Microsoft Visual C++ 2013 Runtime Package for Windows</Name>
