--- a/Comedian Soundboard.Windows/Comedian Soundboard.Windows.csproj
+++ b/Comedian Soundboard.Windows/Comedian Soundboard.Windows.csproj
@@ -129,15 +129,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\BackButton.png" />
-    <Content Include="Assets\Comedy24.jpg" />
+    <Content Include="Assets\Comedy24.scale-100.jpg" />
     <Content Include="Assets\Logo.png" />
-    <Content Include="Assets\SmallLogo.png" />
-    <Content Include="Assets\SplashScreen.png" />
-    <Content Include="Assets\Square150x150Logo.jpg" />
-    <Content Include="Assets\Square310x310Logo.jpg" />
-    <Content Include="Assets\Square70x70Logo.jpg" />
-    <Content Include="Assets\StoreLogo.png" />
-    <Content Include="Assets\Wide310x150Logo.jpg" />
+    <Content Include="Assets\SmallLogo.scale-100.png" />
+    <Content Include="Assets\SplashScreen.scale-100.png" />
+    <Content Include="Assets\Square150x150Logo.scale-100.jpg" />
+    <Content Include="Assets\Square310x310Logo.scale-100.jpg" />
+    <Content Include="Assets\Square70x70Logo.scale-100.jpg" />
+    <Content Include="Assets\StoreLogo.scale-100.png" />
+    <Content Include="Assets\Wide310x150Logo.scale-100.jpg" />
     <Content Include="Assets\WideLogo.png" />
     <None Include="Package.StoreAssociation.xml" />
   </ItemGroup>
