--- a/Comedian Soundboard.WindowsPhone/Comedian Soundboard.WindowsPhone.csproj
+++ b/Comedian Soundboard.WindowsPhone/Comedian Soundboard.WindowsPhone.csproj
@@ -96,20 +96,20 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\Comedy50.jpg" />
-    <Content Include="Assets\SplashScreen.jpg" />
-    <Content Include="Assets\Square150x150Logo.jpg" />
-    <Content Include="Assets\Square44x44Logo.jpg" />
-    <Content Include="Assets\Square71x71Logo.jpg" />
+    <Content Include="Assets\Comedy50.scale-100.jpg" />
+    <Content Include="Assets\SplashScreen.scale-100.jpg" />
+    <Content Include="Assets\Square150x150Logo.scale-100.jpg" />
+    <Content Include="Assets\Square44x44Logo.scale-100.jpg" />
     <Content Include="Assets\Square71x71Logo.png" />
+    <Content Include="Assets\Square71x71Logo.scale-100.jpg" />
     <Content Include="Assets\StoreLogo.jpg" />
-    <Content Include="Assets\Wide310x150Logo.jpg" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="AdMediator.config">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Assets\Wide310x150Logo.scale-100.jpg" />
     <None Include="Package.StoreAssociation.xml" />
     <None Include="packages.config" />
   </ItemGroup>
