Implement Gif image crawling and expose to view

--- a/Comedian Soundboard.WindowsPhone/Comedian Soundboard.WindowsPhone.csproj
+++ b/Comedian Soundboard.WindowsPhone/Comedian Soundboard.WindowsPhone.csproj
@@ -155,6 +155,10 @@
       <HintPath>..\packages\Microsoft.ApplicationInsights.PersistenceChannel.1.2.3\lib\portable-win81+wpa81\Microsoft.ApplicationInsights.PersistenceChannel.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="XamlAnimatedGif, Version=1.1.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\XamlAnimatedGif.1.1.2\lib\portable-win81+wpa81\XamlAnimatedGif.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <SDKReference Include="Microsoft.AdMediator81, Version=1.0">
