--- a/Comedian Soundboard.Windows/packages.config
+++ b/Comedian Soundboard.Windows/packages.config
@@ -4,4 +4,5 @@
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="win81" />
   <package id="Microsoft.ApplicationInsights.PersistenceChannel" version="1.2.3" targetFramework="win81" />
   <package id="Microsoft.ApplicationInsights.WindowsApps" version="1.1.1" targetFramework="win81" />
+  <package id="XamlAnimatedGif" version="1.1.2" targetFramework="win81" />
 </packages>
